// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleFileUploadStatusItem renders custom aria labels 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M4.275 8.875a.738.738 0 0 1 .195-.405l7-7a.738.738 0 0 1 .405-.195v7.6h-7.6ZM26.5 1.25H14.125V9.5c0 .896-.729 1.625-1.625 1.625H4.25V29.5c0 .689.561 1.25 1.25 1.25h21c.689 0 1.25-.561 1.25-1.25v-27c0-.689-.561-1.25-1.25-1.25Z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testFile.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              3B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-label="progressAriaLabel"
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="buttonAriaLabel"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:rf:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders custom class names 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item test"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M4.275 8.875a.738.738 0 0 1 .195-.405l7-7a.738.738 0 0 1 .405-.195v7.6h-7.6ZM26.5 1.25H14.125V9.5c0 .896-.729 1.625-1.625 1.625H4.25V29.5c0 .689.561 1.25 1.25 1.25h21c.689 0 1.25-.561 1.25-1.25v-27c0-.689-.561-1.25-1.25-1.25Z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            />
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              0B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r3:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders custom file name/size/icon/progressAriaLiveMessage when passed 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M29.5 3h-27C1.673 3 1 3.673 1 4.5v23c0 .827.673 1.5 1.5 1.5h27c.827 0 1.5-.673 1.5-1.5v-23c0-.827-.673-1.5-1.5-1.5ZM21 7c1.654 0 3 1.346 3 3s-1.346 3-3 3-3-1.346-3-3 1.346-3 3-3Zm7 17.75c0 .689-.561 1.25-1.25 1.25H5.25C4.561 26 4 25.439 4 24.75V18c0-.266.105-.52.293-.707l4.823-4.823a1.279 1.279 0 0 1 1.768 0L18 19.586l3.116-3.116a1.279 1.279 0 0 1 1.768 0l4.823 4.823A.997.997 0 0 1 28 22v2.75Z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        test message
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testCustomFileName.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              42
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r7:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders custom function progressAriaLiveMessage when passed 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M29.5 3h-27C1.673 3 1 3.673 1 4.5v23c0 .827.673 1.5 1.5 1.5h27c.827 0 1.5-.673 1.5-1.5v-23c0-.827-.673-1.5-1.5-1.5ZM21 7c1.654 0 3 1.346 3 3s-1.346 3-3 3-3-1.346-3-3 1.346-3 3-3Zm7 17.75c0 .689-.561 1.25-1.25 1.25H5.25C4.561 26 4 25.439 4 24.75V18c0-.266.105-.52.293-.707l4.823-4.823a1.279 1.279 0 0 1 1.768 0L18 19.586l3.116-3.116a1.279 1.279 0 0 1 1.768 0l4.823 4.823A.997.997 0 0 1 28 22v2.75Z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        test message 0
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testCustomFileName.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              42
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r9:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders custom progress value/variant when passed 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M4.275 8.875a.738.738 0 0 1 .195-.405l7-7a.738.738 0 0 1 .405-.195v7.6h-7.6ZM26.5 1.25H14.125V9.5c0 .896-.729 1.625-1.625 1.625H4.25V29.5c0 .689.561 1.25 1.25 1.25h21c.689 0 1.25-.561 1.25-1.25v-27c0-.689-.561-1.25-1.25-1.25Z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 42%.
      </div>
      <div
        class="pf-v6-c-progress pf-m-warning"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testFile.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              3B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            42%
          </span>
          <span
            class="pf-v6-c-progress__status-icon"
          >
            <svg
              aria-hidden="true"
              class="pf-v6-svg"
              fill="currentColor"
              height="1em"
              role="img"
              viewBox="0 0 32 32"
              width="1em"
            >
              <path
                d="m31.874 28.514-15.011-27a1.001 1.001 0 0 0-1.748 0l-15.011 27A1 1 0 0 0 .978 30H31a1 1 0 0 0 .874-1.486ZM14.5 12a1.5 1.5 0 0 1 3 0v5a1.5 1.5 0 0 1-3 0v-5ZM16 26.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 26.001Z"
              />
            </svg>
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="42"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 42%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:rd:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders expected values from a passed file object 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M4.275 8.875a.738.738 0 0 1 .195-.405l7-7a.738.738 0 0 1 .405-.195v7.6h-7.6ZM26.5 1.25H14.125V9.5c0 .896-.729 1.625-1.625 1.625H4.25V29.5c0 .689.561 1.25 1.25 1.25h21c.689 0 1.25-.561 1.25-1.25v-27c0-.689-.561-1.25-1.25-1.25Z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testFile.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              3B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r5:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem renders with expected class names 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M4.275 8.875a.738.738 0 0 1 .195-.405l7-7a.738.738 0 0 1 .405-.195v7.6h-7.6ZM26.5 1.25H14.125V9.5c0 .896-.729 1.625-1.625 1.625H4.25V29.5c0 .689.561 1.25 1.25 1.25h21c.689 0 1.25-.561 1.25-1.25v-27c0-.689-.561-1.25-1.25-1.25Z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            />
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              0B
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:r1:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;

exports[`MultipleFileUploadStatusItem rendersdefault progressAriaLiveMessage when nothing is passed 1`] = `
<DocumentFragment>
  <li
    class="pf-v6-c-multiple-file-upload__status-item"
  >
    <div
      class="pf-v6-c-multiple-file-upload__status-item-icon"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        viewBox="0 0 32 32"
        width="1em"
      >
        <path
          d="M29.5 3h-27C1.673 3 1 3.673 1 4.5v23c0 .827.673 1.5 1.5 1.5h27c.827 0 1.5-.673 1.5-1.5v-23c0-.827-.673-1.5-1.5-1.5ZM21 7c1.654 0 3 1.346 3 3s-1.346 3-3 3-3-1.346-3-3 1.346-3 3-3Zm7 17.75c0 .689-.561 1.25-1.25 1.25H5.25C4.561 26 4 25.439 4 24.75V18c0-.266.105-.52.293-.707l4.823-4.823a1.279 1.279 0 0 1 1.768 0L18 19.586l3.116-3.116a1.279 1.279 0 0 1 1.768 0l4.823 4.823A.997.997 0 0 1 28 22v2.75Z"
        />
      </svg>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-main"
    >
      <div
        aria-live="polite"
        class="pf-v6-screen-reader"
      >
        Progress value is 0%.
      </div>
      <div
        class="pf-v6-c-progress"
        id="test-progress-id"
      >
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__description"
          id="test-progress-id-description"
        >
          <span
            class="pf-v6-c-multiple-file-upload__status-item-progress"
          >
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-text"
            >
              testCustomFileName.txt
            </span>
            <span
              class="pf-v6-c-multiple-file-upload__status-item-progress-size"
            >
              42
            </span>
          </span>
        </div>
        <div
          aria-hidden="true"
          class="pf-v6-c-progress__status"
        >
          <span
            class="pf-v6-c-progress__measure"
          >
            0%
          </span>
        </div>
        <div
          aria-labelledby="test-progress-id-description"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="pf-v6-c-progress__bar"
          role="progressbar"
        >
          <div
            class="pf-v6-c-progress__indicator"
            style="width: 0%;"
          >
            <span
              class="pf-v6-c-progress__measure"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="pf-v6-c-multiple-file-upload__status-item-close"
    >
      <button
        aria-label="Remove from list"
        class="pf-v6-c-button pf-m-plain"
        data-ouia-component-id="OUIA-Generated-Button-plain-:rb:"
        data-ouia-component-type="PF6/Button"
        data-ouia-safe="true"
        type="button"
      >
        <span
          class="pf-v6-c-button__icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 20 20"
            width="1em"
          >
            <path
              d="M17.8 16.2 11.59 10l6.21-6.21c.42-.46.39-1.17-.07-1.59-.43-.4-1.09-.4-1.52 0l-6.2 6.2-6.22-6.19c-.44-.44-1.15-.44-1.59 0-.44.44-.44 1.15 0 1.59l6.2 6.21-6.2 6.2c-.42.46-.39 1.17.07 1.59.43.4 1.09.4 1.52 0L10 11.59l6.2 6.2c.44.44 1.15.44 1.59 0 .44-.45.44-1.16 0-1.6Z"
            />
          </svg>
        </span>
      </button>
    </div>
  </li>
</DocumentFragment>
`;
